Phase2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> program
Rule 1     program -> declist MAIN LRB RRB block
Rule 2     declist -> dec
Rule 3     declist -> declist dec
Rule 4     declist -> empty
Rule 5     dec -> vardec
Rule 6     dec -> funcdec
Rule 7     type -> INTEGER
Rule 8     type -> FLOAT
Rule 9     type -> BOOLEAN
Rule 10    iddec -> ID
Rule 11    iddec -> ID LSB exp RSB
Rule 12    iddec -> ID ASSIGN exp
Rule 13    idlist -> iddec
Rule 14    idlist -> idlist COMMA iddec
Rule 15    vardec -> type idlist SEMICOLON
Rule 16    funcdec -> type ID LRB paramdecs RRB block
Rule 17    funcdec -> VOID ID LRB paramdecs RRB block
Rule 18    paramdecs -> paramdecslist
Rule 19    paramdecs -> empty
Rule 20    paramdecslist -> paramdec
Rule 21    paramdecslist -> paramdecslist COMMA paramdec
Rule 22    paramdec -> type ID
Rule 23    paramdec -> type ID LSB RSB
Rule 24    varlist -> vardec
Rule 25    varlist -> varlist vardec
Rule 26    varlist -> empty
Rule 27    block -> LCB varlist stmtlist RCB
Rule 28    stmtlist -> stmt
Rule 29    stmtlist -> stmtlist stmt
Rule 30    stmtlist -> empty
Rule 31    lvalue -> ID
Rule 32    lvalue -> ID LSB exp RSB
Rule 33    stmt -> matched_stmt
Rule 34    stmt -> unmatched_stmt
Rule 35    matched_stmt -> IF LRB exp RRB matched_stmt elseiflist ELSE matched_stmt
Rule 36    matched_stmt -> others
Rule 37    unmatched_stmt -> IF LRB exp RRB matched_stmt elseiflist
Rule 38    unmatched_stmt -> IF LRB exp RRB matched_stmt elseiflist ELSE unmatched_stmt
Rule 39    others -> RETURN exp SEMICOLON
Rule 40    others -> exp SEMICOLON
Rule 41    others -> block
Rule 42    others -> WHILE LRB exp RRB stmt
Rule 43    others -> FOR LRB exp SEMICOLON exp SEMICOLON exp RRB stmt
Rule 44    others -> PRINT LRB ID RRB SEMICOLON
Rule 45    elseiflist -> ELIF LRB exp RRB stmt
Rule 46    elseiflist -> elseiflist ELIF LRB exp RRB stmt
Rule 47    elseiflist -> empty
Rule 48    exp -> lvalue ASSIGN exp
Rule 49    exp -> exp operator exp
Rule 50    exp -> exp relop exp
Rule 51    exp -> const
Rule 52    exp -> lvalue
Rule 53    exp -> ID LRB explist RRB
Rule 54    exp -> LRB exp RRB
Rule 55    exp -> ID LRB RRB
Rule 56    exp -> SUB exp
Rule 57    exp -> NOT exp
Rule 58    operator -> OR
Rule 59    operator -> AND
Rule 60    operator -> SUM
Rule 61    operator -> SUB
Rule 62    operator -> MUL
Rule 63    operator -> DIV
Rule 64    operator -> MOD
Rule 65    const -> INTEGERNUMBER
Rule 66    const -> FLOATNUMBER
Rule 67    const -> TRUE
Rule 68    const -> FALSE
Rule 69    relop -> GT
Rule 70    relop -> LT
Rule 71    relop -> NE
Rule 72    relop -> EQ
Rule 73    relop -> LE
Rule 74    relop -> GE
Rule 75    explist -> exp
Rule 76    explist -> explist COMMA exp
Rule 77    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59
ASSIGN               : 12 48
BOOLEAN              : 9
COMMA                : 14 21 76
DIV                  : 63
ELIF                 : 45 46
ELSE                 : 35 38
EQ                   : 72
ERROR                : 
FALSE                : 68
FLOAT                : 8
FLOATNUMBER          : 66
FOR                  : 43
GE                   : 74
GT                   : 69
ID                   : 10 11 12 16 17 22 23 31 32 44 53 55
IF                   : 35 37 38
INTEGER              : 7
INTEGERNUMBER        : 65
LCB                  : 27
LE                   : 73
LRB                  : 1 16 17 35 37 38 42 43 44 45 46 53 54 55
LSB                  : 11 23 32
LT                   : 70
MAIN                 : 1
MOD                  : 64
MUL                  : 62
NE                   : 71
NOT                  : 57
OR                   : 58
PRINT                : 44
RCB                  : 27
RETURN               : 39
RRB                  : 1 16 17 35 37 38 42 43 44 45 46 53 54 55
RSB                  : 11 23 32
SEMICOLON            : 15 39 40 43 43 44
SUB                  : 56 61
SUM                  : 60
TRUE                 : 67
VOID                 : 17
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

block                : 1 16 17 41
const                : 51
dec                  : 2 3
declist              : 1 3
elseiflist           : 35 37 38 46
empty                : 4 19 26 30 47
exp                  : 11 12 32 35 37 38 39 40 42 43 43 43 45 46 48 49 49 50 50 54 56 57 75 76
explist              : 53 76
funcdec              : 6
iddec                : 13 14
idlist               : 14 15
lvalue               : 48 52
matched_stmt         : 33 35 35 37 38
operator             : 49
others               : 36
paramdec             : 20 21
paramdecs            : 16 17
paramdecslist        : 18 21
program              : 0
relop                : 50
stmt                 : 28 29 42 43 45 46
stmtlist             : 27 29
type                 : 15 16 22 23
unmatched_stmt       : 34 38
vardec               : 5 24 25
varlist              : 25 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declist MAIN LRB RRB block
    (2) declist -> . dec
    (3) declist -> . declist dec
    (4) declist -> . empty
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (77) empty -> .
    (15) vardec -> . type idlist SEMICOLON
    (16) funcdec -> . type ID LRB paramdecs RRB block
    (17) funcdec -> . VOID ID LRB paramdecs RRB block
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    MAIN            reduce using rule 77 (empty -> .)
    VOID            reduce using rule 77 (empty -> .)
    INTEGER         reduce using rule 77 (empty -> .)
    FLOAT           reduce using rule 77 (empty -> .)
    BOOLEAN         reduce using rule 77 (empty -> .)

  ! VOID            [ shift and go to state 8 ]
  ! INTEGER         [ shift and go to state 9 ]
  ! FLOAT           [ shift and go to state 10 ]
  ! BOOLEAN         [ shift and go to state 11 ]

    program                        shift and go to state 1
    declist                        shift and go to state 2
    dec                            shift and go to state 3
    empty                          shift and go to state 4
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declist . MAIN LRB RRB block
    (3) declist -> declist . dec
    (5) dec -> . vardec
    (6) dec -> . funcdec
    (15) vardec -> . type idlist SEMICOLON
    (16) funcdec -> . type ID LRB paramdecs RRB block
    (17) funcdec -> . VOID ID LRB paramdecs RRB block
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    MAIN            shift and go to state 12
    VOID            shift and go to state 8
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    dec                            shift and go to state 13
    vardec                         shift and go to state 5
    funcdec                        shift and go to state 6
    type                           shift and go to state 7

state 3

    (2) declist -> dec .

    MAIN            reduce using rule 2 (declist -> dec .)
    VOID            reduce using rule 2 (declist -> dec .)
    INTEGER         reduce using rule 2 (declist -> dec .)
    FLOAT           reduce using rule 2 (declist -> dec .)
    BOOLEAN         reduce using rule 2 (declist -> dec .)


state 4

    (4) declist -> empty .

    MAIN            reduce using rule 4 (declist -> empty .)
    VOID            reduce using rule 4 (declist -> empty .)
    INTEGER         reduce using rule 4 (declist -> empty .)
    FLOAT           reduce using rule 4 (declist -> empty .)
    BOOLEAN         reduce using rule 4 (declist -> empty .)


state 5

    (5) dec -> vardec .

    MAIN            reduce using rule 5 (dec -> vardec .)
    VOID            reduce using rule 5 (dec -> vardec .)
    INTEGER         reduce using rule 5 (dec -> vardec .)
    FLOAT           reduce using rule 5 (dec -> vardec .)
    BOOLEAN         reduce using rule 5 (dec -> vardec .)


state 6

    (6) dec -> funcdec .

    MAIN            reduce using rule 6 (dec -> funcdec .)
    VOID            reduce using rule 6 (dec -> funcdec .)
    INTEGER         reduce using rule 6 (dec -> funcdec .)
    FLOAT           reduce using rule 6 (dec -> funcdec .)
    BOOLEAN         reduce using rule 6 (dec -> funcdec .)


state 7

    (15) vardec -> type . idlist SEMICOLON
    (16) funcdec -> type . ID LRB paramdecs RRB block
    (13) idlist -> . iddec
    (14) idlist -> . idlist COMMA iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 15

    idlist                         shift and go to state 14
    iddec                          shift and go to state 16

state 8

    (17) funcdec -> VOID . ID LRB paramdecs RRB block

    ID              shift and go to state 17


state 9

    (7) type -> INTEGER .

    ID              reduce using rule 7 (type -> INTEGER .)


state 10

    (8) type -> FLOAT .

    ID              reduce using rule 8 (type -> FLOAT .)


state 11

    (9) type -> BOOLEAN .

    ID              reduce using rule 9 (type -> BOOLEAN .)


state 12

    (1) program -> declist MAIN . LRB RRB block

    LRB             shift and go to state 18


state 13

    (3) declist -> declist dec .

    MAIN            reduce using rule 3 (declist -> declist dec .)
    VOID            reduce using rule 3 (declist -> declist dec .)
    INTEGER         reduce using rule 3 (declist -> declist dec .)
    FLOAT           reduce using rule 3 (declist -> declist dec .)
    BOOLEAN         reduce using rule 3 (declist -> declist dec .)


state 14

    (15) vardec -> type idlist . SEMICOLON
    (14) idlist -> idlist . COMMA iddec

    SEMICOLON       shift and go to state 19
    COMMA           shift and go to state 20


state 15

    (16) funcdec -> type ID . LRB paramdecs RRB block
    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    LRB             shift and go to state 21
    SEMICOLON       reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 22
    ASSIGN          shift and go to state 23


state 16

    (13) idlist -> iddec .

    SEMICOLON       reduce using rule 13 (idlist -> iddec .)
    COMMA           reduce using rule 13 (idlist -> iddec .)


state 17

    (17) funcdec -> VOID ID . LRB paramdecs RRB block

    LRB             shift and go to state 24


state 18

    (1) program -> declist MAIN LRB . RRB block

    RRB             shift and go to state 25


state 19

    (15) vardec -> type idlist SEMICOLON .

    MAIN            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    VOID            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    INTEGER         reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FLOAT           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    BOOLEAN         reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    IF              reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    RETURN          reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    WHILE           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FOR             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    PRINT           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    ID              reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    LRB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    SUB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    NOT             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    LCB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    INTEGERNUMBER   reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FLOATNUMBER     reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    TRUE            reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    FALSE           reduce using rule 15 (vardec -> type idlist SEMICOLON .)
    RCB             reduce using rule 15 (vardec -> type idlist SEMICOLON .)


state 20

    (14) idlist -> idlist COMMA . iddec
    (10) iddec -> . ID
    (11) iddec -> . ID LSB exp RSB
    (12) iddec -> . ID ASSIGN exp

    ID              shift and go to state 27

    iddec                          shift and go to state 26

state 21

    (16) funcdec -> type ID LRB . paramdecs RRB block
    (18) paramdecs -> . paramdecslist
    (19) paramdecs -> . empty
    (20) paramdecslist -> . paramdec
    (21) paramdecslist -> . paramdecslist COMMA paramdec
    (77) empty -> .
    (22) paramdec -> . type ID
    (23) paramdec -> . type ID LSB RSB
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    RRB             reduce using rule 77 (empty -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    type                           shift and go to state 28
    paramdecs                      shift and go to state 29
    paramdecslist                  shift and go to state 30
    empty                          shift and go to state 31
    paramdec                       shift and go to state 32

state 22

    (11) iddec -> ID LSB . exp RSB
    (48) exp -> . lvalue ASSIGN exp
    (49) exp -> . exp operator exp
    (50) exp -> . exp relop exp
    (51) exp -> . const
    (52) exp -> . lvalue
    (53) exp -> . ID LRB explist RRB
    (54) exp -> . LRB exp RRB
    (55) exp -> . ID LRB RRB
    (56) exp -> . SUB exp
    (57) exp -> . NOT exp
    (31) lvalue -> . ID
    (32) lvalue -> . ID LSB exp RSB
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 33
    LRB             shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    INTEGERNUMBER   shift and go to state 40
    FLOATNUMBER     shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    exp                            shift and go to state 34
    lvalue                         shift and go to state 35
    const                          shift and go to state 36

state 23

    (12) iddec -> ID ASSIGN . exp
    (48) exp -> . lvalue ASSIGN exp
    (49) exp -> . exp operator exp
    (50) exp -> . exp relop exp
    (51) exp -> . const
    (52) exp -> . lvalue
    (53) exp -> . ID LRB explist RRB
    (54) exp -> . LRB exp RRB
    (55) exp -> . ID LRB RRB
    (56) exp -> . SUB exp
    (57) exp -> . NOT exp
    (31) lvalue -> . ID
    (32) lvalue -> . ID LSB exp RSB
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 33
    LRB             shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    INTEGERNUMBER   shift and go to state 40
    FLOATNUMBER     shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    exp                            shift and go to state 44
    lvalue                         shift and go to state 35
    const                          shift and go to state 36

state 24

    (17) funcdec -> VOID ID LRB . paramdecs RRB block
    (18) paramdecs -> . paramdecslist
    (19) paramdecs -> . empty
    (20) paramdecslist -> . paramdec
    (21) paramdecslist -> . paramdecslist COMMA paramdec
    (77) empty -> .
    (22) paramdec -> . type ID
    (23) paramdec -> . type ID LSB RSB
    (7) type -> . INTEGER
    (8) type -> . FLOAT
    (9) type -> . BOOLEAN

    RRB             reduce using rule 77 (empty -> .)
    INTEGER         shift and go to state 9
    FLOAT           shift and go to state 10
    BOOLEAN         shift and go to state 11

    paramdecs                      shift and go to state 45
    paramdecslist                  shift and go to state 30
    empty                          shift and go to state 31
    paramdec                       shift and go to state 32
    type                           shift and go to state 28

state 25

    (1) program -> declist MAIN LRB RRB . block
    (27) block -> . LCB varlist stmtlist RCB

    LCB             shift and go to state 47

    block                          shift and go to state 46

state 26

    (14) idlist -> idlist COMMA iddec .

    SEMICOLON       reduce using rule 14 (idlist -> idlist COMMA iddec .)
    COMMA           reduce using rule 14 (idlist -> idlist COMMA iddec .)


state 27

    (10) iddec -> ID .
    (11) iddec -> ID . LSB exp RSB
    (12) iddec -> ID . ASSIGN exp

    SEMICOLON       reduce using rule 10 (iddec -> ID .)
    COMMA           reduce using rule 10 (iddec -> ID .)
    LSB             shift and go to state 22
    ASSIGN          shift and go to state 23


state 28

    (22) paramdec -> type . ID
    (23) paramdec -> type . ID LSB RSB

    ID              shift and go to state 48


state 29

    (16) funcdec -> type ID LRB paramdecs . RRB block

    RRB             shift and go to state 49


state 30

    (18) paramdecs -> paramdecslist .
    (21) paramdecslist -> paramdecslist . COMMA paramdec

    RRB             reduce using rule 18 (paramdecs -> paramdecslist .)
    COMMA           shift and go to state 50


state 31

    (19) paramdecs -> empty .

    RRB             reduce using rule 19 (paramdecs -> empty .)


state 32

    (20) paramdecslist -> paramdec .

    COMMA           reduce using rule 20 (paramdecslist -> paramdec .)
    RRB             reduce using rule 20 (paramdecslist -> paramdec .)


state 33

    (53) exp -> ID . LRB explist RRB
    (55) exp -> ID . LRB RRB
    (31) lvalue -> ID .
    (32) lvalue -> ID . LSB exp RSB

    LRB             shift and go to state 51
    ASSIGN          reduce using rule 31 (lvalue -> ID .)
    RSB             reduce using rule 31 (lvalue -> ID .)
    OR              reduce using rule 31 (lvalue -> ID .)
    AND             reduce using rule 31 (lvalue -> ID .)
    SUM             reduce using rule 31 (lvalue -> ID .)
    SUB             reduce using rule 31 (lvalue -> ID .)
    MUL             reduce using rule 31 (lvalue -> ID .)
    DIV             reduce using rule 31 (lvalue -> ID .)
    MOD             reduce using rule 31 (lvalue -> ID .)
    GT              reduce using rule 31 (lvalue -> ID .)
    LT              reduce using rule 31 (lvalue -> ID .)
    NE              reduce using rule 31 (lvalue -> ID .)
    EQ              reduce using rule 31 (lvalue -> ID .)
    LE              reduce using rule 31 (lvalue -> ID .)
    GE              reduce using rule 31 (lvalue -> ID .)
    SEMICOLON       reduce using rule 31 (lvalue -> ID .)
    COMMA           reduce using rule 31 (lvalue -> ID .)
    RRB             reduce using rule 31 (lvalue -> ID .)
    LSB             shift and go to state 52


state 34

    (11) iddec -> ID LSB exp . RSB
    (49) exp -> exp . operator exp
    (50) exp -> exp . relop exp
    (58) operator -> . OR
    (59) operator -> . AND
    (60) operator -> . SUM
    (61) operator -> . SUB
    (62) operator -> . MUL
    (63) operator -> . DIV
    (64) operator -> . MOD
    (69) relop -> . GT
    (70) relop -> . LT
    (71) relop -> . NE
    (72) relop -> . EQ
    (73) relop -> . LE
    (74) relop -> . GE

    RSB             shift and go to state 53
    OR              shift and go to state 56
    AND             shift and go to state 57
    SUM             shift and go to state 58
    SUB             shift and go to state 59
    MUL             shift and go to state 60
    DIV             shift and go to state 61
    MOD             shift and go to state 62
    GT              shift and go to state 63
    LT              shift and go to state 64
    NE              shift and go to state 65
    EQ              shift and go to state 66
    LE              shift and go to state 67
    GE              shift and go to state 68

    operator                       shift and go to state 54
    relop                          shift and go to state 55

state 35

    (48) exp -> lvalue . ASSIGN exp
    (52) exp -> lvalue .

    ASSIGN          shift and go to state 69
    RSB             reduce using rule 52 (exp -> lvalue .)
    OR              reduce using rule 52 (exp -> lvalue .)
    AND             reduce using rule 52 (exp -> lvalue .)
    SUM             reduce using rule 52 (exp -> lvalue .)
    SUB             reduce using rule 52 (exp -> lvalue .)
    MUL             reduce using rule 52 (exp -> lvalue .)
    DIV             reduce using rule 52 (exp -> lvalue .)
    MOD             reduce using rule 52 (exp -> lvalue .)
    GT              reduce using rule 52 (exp -> lvalue .)
    LT              reduce using rule 52 (exp -> lvalue .)
    NE              reduce using rule 52 (exp -> lvalue .)
    EQ              reduce using rule 52 (exp -> lvalue .)
    LE              reduce using rule 52 (exp -> lvalue .)
    GE              reduce using rule 52 (exp -> lvalue .)
    SEMICOLON       reduce using rule 52 (exp -> lvalue .)
    COMMA           reduce using rule 52 (exp -> lvalue .)
    RRB             reduce using rule 52 (exp -> lvalue .)


state 36

    (51) exp -> const .

    RSB             reduce using rule 51 (exp -> const .)
    OR              reduce using rule 51 (exp -> const .)
    AND             reduce using rule 51 (exp -> const .)
    SUM             reduce using rule 51 (exp -> const .)
    SUB             reduce using rule 51 (exp -> const .)
    MUL             reduce using rule 51 (exp -> const .)
    DIV             reduce using rule 51 (exp -> const .)
    MOD             reduce using rule 51 (exp -> const .)
    GT              reduce using rule 51 (exp -> const .)
    LT              reduce using rule 51 (exp -> const .)
    NE              reduce using rule 51 (exp -> const .)
    EQ              reduce using rule 51 (exp -> const .)
    LE              reduce using rule 51 (exp -> const .)
    GE              reduce using rule 51 (exp -> const .)
    SEMICOLON       reduce using rule 51 (exp -> const .)
    COMMA           reduce using rule 51 (exp -> const .)
    RRB             reduce using rule 51 (exp -> const .)


state 37

    (54) exp -> LRB . exp RRB
    (48) exp -> . lvalue ASSIGN exp
    (49) exp -> . exp operator exp
    (50) exp -> . exp relop exp
    (51) exp -> . const
    (52) exp -> . lvalue
    (53) exp -> . ID LRB explist RRB
    (54) exp -> . LRB exp RRB
    (55) exp -> . ID LRB RRB
    (56) exp -> . SUB exp
    (57) exp -> . NOT exp
    (31) lvalue -> . ID
    (32) lvalue -> . ID LSB exp RSB
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 33
    LRB             shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    INTEGERNUMBER   shift and go to state 40
    FLOATNUMBER     shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    exp                            shift and go to state 70
    lvalue                         shift and go to state 35
    const                          shift and go to state 36

state 38

    (56) exp -> SUB . exp
    (48) exp -> . lvalue ASSIGN exp
    (49) exp -> . exp operator exp
    (50) exp -> . exp relop exp
    (51) exp -> . const
    (52) exp -> . lvalue
    (53) exp -> . ID LRB explist RRB
    (54) exp -> . LRB exp RRB
    (55) exp -> . ID LRB RRB
    (56) exp -> . SUB exp
    (57) exp -> . NOT exp
    (31) lvalue -> . ID
    (32) lvalue -> . ID LSB exp RSB
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 33
    LRB             shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    INTEGERNUMBER   shift and go to state 40
    FLOATNUMBER     shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    exp                            shift and go to state 71
    lvalue                         shift and go to state 35
    const                          shift and go to state 36

state 39

    (57) exp -> NOT . exp
    (48) exp -> . lvalue ASSIGN exp
    (49) exp -> . exp operator exp
    (50) exp -> . exp relop exp
    (51) exp -> . const
    (52) exp -> . lvalue
    (53) exp -> . ID LRB explist RRB
    (54) exp -> . LRB exp RRB
    (55) exp -> . ID LRB RRB
    (56) exp -> . SUB exp
    (57) exp -> . NOT exp
    (31) lvalue -> . ID
    (32) lvalue -> . ID LSB exp RSB
    (65) const -> . INTEGERNUMBER
    (66) const -> . FLOATNUMBER
    (67) const -> . TRUE
    (68) const -> . FALSE

    ID              shift and go to state 33
    LRB             shift and go to state 37
    SUB             shift and go to state 38
    NOT             shift and go to state 39
    INTEGERNUMBER   shift and go to state 40
    FLOATNUMBER     shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    exp                            shift and go to state 72
    lvalue                         shift and go to state 35
    const                          shift and go to state 36

state 40

    (65) const -> INTEGERNUMBER .

    RSB             reduce using rule 65 (const -> INTEGERNUMBER .)
    OR              reduce using rule 65 (const -> INTEGERNUMBER .)
    AND             reduce using rule 65 (const -> INTEGERNUMBER .)
    SUM             reduce using rule 65 (const -> INTEGERNUMBER .)
    SUB             reduce using rule 65 (const -> INTEGERNUMBER .)
    MUL             reduce using rule 65 (const -> INTEGERNUMBER .)
    DIV             reduce using rule 65 (const -> INTEGERNUMBER .)
    MOD             reduce using rule 65 (const -> INTEGERNUMBER .)
    GT              reduce using rule 65 (const -> INTEGERNUMBER .)
    LT              reduce using rule 65 (const -> INTEGERNUMBER .)
    NE              reduce using rule 65 (const -> INTEGERNUMBER .)
    EQ              reduce using rule 65 (const -> INTEGERNUMBER .)
    LE              reduce using rule 65 (const -> INTEGERNUMBER .)
    GE              reduce using rule 65 (const -> INTEGERNUMBER .)
    SEMICOLON       reduce using rule 65 (const -> INTEGERNUMBER .)
    COMMA           reduce using rule 65 (const -> INTEGERNUMBER .)
    RRB             reduce using rule 65 (const -> INTEGERNUMBER .)


state 41

    (66) const -> FLOATNUMBER .

    RSB             reduce using rule 66 (const -> FLOATNUMBER .)
    OR              reduce using rule 66 (const -> FLOATNUMBER .)
    AND             reduce using rule 66 (const -> FLOATNUMBER .)
    SUM             reduce using rule 66 (const -> FLOATNUMBER .)
    SUB             reduce using rule 66 (const -> FLOATNUMBER .)
    MUL             reduce using rule 66 (const -> FLOATNUMBER .)
    DIV             reduce using rule 66 (const -> FLOATNUMBER .)
